--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,3 @@
 a { text-decoration: none; }
 body { background-color: #808080; margin: 0 5%; padding: 20px 0 0; text-align: center; }
-img { padding: 0 0; }
+img { border-radius: 20px; padding: 0 0; }
