--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,3 @@
 a { text-decoration: none; }
-body { background-color: #eee; margin: 0 5%; padding: 0 0; text-align: center; }
+body { background-color: #eee; margin: 0 5%; padding: 10px 0; text-align: center; }
 img { border-radius: 20px; padding: 0 0; }
